--- a/1 essential-html/input/index.html
+++ b/1 essential-html/input/index.html
@@ -11,7 +11,7 @@
     <label for="pass">password:</label>
     <input type="text" name="password" id="pass"><br>
     <label for="email">email:</label>
-    <input type="text" name="" id="email">
+    <input type="email" name="" id="email">
 </body>
 
 </html>
